Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13814

QPainter::drawPixmap on QGLWidget with setMask(), QPainter::drawImage regression (Qt 4.7.0)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.2
    • 4.6.3, 4.7.0
    • GUI: OpenGL, GUI: Painting
    • None
    • openSUSE 11.3 32bit, gcc 4.5,
      GeForce 8800 GTS, NVIDIA Driver Version: 256.53, 260.19.04
    • 88b5af89e35584f12330bc6932176d5df413d1b1

    Description

      test program results:

      Qt 4.6.3
      drawPixmap on QWidget: ok
      drawImage on QWidget: ok
      drawPixmap on QGLWidget: error (mask ignored)
      drawImage on QGLWidget: ok
      drawPixmap on 2nd QGLWidget: error (only black rectangle on both GL widgets)

      Qt 4.7.0
      drawPixmap on QWidget: ok
      drawImage on QWidget: error (mask ignored)
      drawPixmap on QGLWidget: error (mask ignored)
      drawImage on QGLWidget: error (mask ignored)
      drawPixmap on 2nd QGLWidget: error (only black rectangle on second GL widget)

      Attachments

        1. QGLWidget.png
          QGLWidget.png
          4 kB
        2. QGLWidget2.png
          QGLWidget2.png
          3 kB
        3. QWidget.png
          QWidget.png
          4 kB
        4. main.cpp
          2 kB
        5. pixmap_test.pro
          0.3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kjernase Trond Kjernåsen (Inactive)
            hc Michal Dvoracek
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes