Fixed drawing of QPixmaps with masks in the GL 2 and X11 engines.

A regression from 4.6.x. This is an X11-only problem caused by the
separate masks that an X11 QPixmap can contain. These masks we're not
taken into account when a number optimizations were done for 4.7.
Introduction of the texture-from-pixmap extension in 4.6 also broke
masked pixmaps under X11.

Task-number: QTBUG-13814
Reviewed-by: Samuel