src/gui/image/qpixmap_x11.cpp
@@ -1321,6 +1321,15 @@ QBitmap QX11PixmapData::mask() const
     return mask;
 }
 
+bool QX11PixmapData::hasMask() const
+{
+    return
+#ifndef QT_NO_XRENDER
+        (picture && d == 32) ||
+#endif
+        (d == 1) || x11_mask;
+}
+
 
 /*!
     Sets a mask bitmap.
@@ -1549,7 +1558,7 @@ QImage QX11PixmapData::toImage(const QRect &rect) const
     if (!xiWrapper.xi)
         return QImage();
 
-    if (canTakeQImageFromXImage(xiWrapper))
+    if (!x11_mask && canTakeQImageFromXImage(xiWrapper))
         return takeQImageFromXImage(xiWrapper);
 
     QImage image = toImage(xiWrapper, rect);
